--- a/proxy.config.json
+++ b/proxy.config.json
@@ -1,6 +1,6 @@
 {
   "/": {
-      "target": "http://10.1.236.130:8080/soms",
+      "target": "http://127.0.0.1:3200/",
       "secure": false,
       "changeOrigin": true
   }
